kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: timetracker
  labels:
    name: timetracker
    app: timetracker-system
